test/corpus/L1/negative/unclosed-block.st
"---
kind: negative
section: error.unclosed-block
codes: E_UNCLOSED_BLOCK
---"
[ 1 + 2
